# buildGen

./: .gitignore  PYTHON_CLI_SPEC.md  README.md  pyproject.toml
blueprints/: artistic-medieval-house-2.blueprint  base-on-yagluth-s-fingers (1).blueprint  casa-early-game.blueprint  dvergr-brothers-bank.blueprint  glamr-mausoleum.blueprint  lake-side-cottage.blueprint  leif-co-traders.blueprint  my-version-to-apudma-mage-house.blueprint  mysterious-tower-of-arcane-ascension.blueprint  new-year-new-home-starter-build.blueprint  plains-medium-house-1.blueprint  portalhub-dome.blueprint  realm-of-rhovanion-autumnwatch-3296.blueprint  realm-of-rhovanion-dun-ruunvald (1).blueprint  remake-of-my-first-big-base.blueprint  runestone-townhomes.blueprint  simple-ring-fort.blueprint  simple-starter-house.blueprint  starter-vanilla-build-2.blueprint  storage-hub.blueprint  suspended-bell-tower (1).blueprint  swampy-treehouse-vanilla.blueprint  the-temple-of-the-aesir.blueprint  twin-ravens-books-amp-curiosities.blueprint  vanilla-small-1.blueprint  vanilla-small-village-1.blueprint  vanilla-viking-house-1.blueprint  vanilla-viking-house-2.blueprint  workshop-for-bri-s-mini-castle (1).blueprint
src/: __init__.py  cli.py  models.py  pipeline.py
src/agents/: __init__.py  build_agent.py  design_agent.py  detail_agent.py  detail_interpreter.py
src/data/: prefabs.json
src/tools/: __init__.py  blueprint_converter.py  blueprint_parser.py  building_analyzer.py  placement_tools.py  prefab_lookup.py  snap_validator.py
